tests/NormalTests/paczka1/fuzzy1/87531124.err
Error in line 8: Ss2g A462 67,8
Error in line 13: IHmluhbmv5 A458 21,1
Error in line 18: dh7sPp A524 91,2
Error in line 15: tqQbkCk2q4 A524 4,7
Error in line 27: tqQbkCk2q4 A515 73,0
Error in line 20: trc A524 99,5
